[gd_scene load_steps=3 format=3 uid="uid://dmfruovnif6mi"]

[ext_resource type="Script" uid="uid://bspqc2mj2cug8" path="res://src/stages/end_scene/victory_screen.gd" id="1_dcimy"]
[ext_resource type="PackedScene" uid="uid://bjy1xnxblu6qu" path="res://src/stages/end_scene/player_score_graph.tscn" id="2_cvrxf"]

[node name="EndScene" type="Node2D"]

[node name="VictoryScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_dcimy")

[node name="PanelContainer" type="PanelContainer" parent="VictoryScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VictoryScreen/PanelContainer"]
layout_mode = 2
theme_type_variation = &"SimplePanel"

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryScreen/PanelContainer/PanelContainer"]
layout_mode = 2

[node name="VictoryType" type="Label" parent="VictoryScreen/PanelContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"EndLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VictoryScreen/PanelContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 32

[node name="ScoreGraphs" type="HBoxContainer" parent="VictoryScreen/PanelContainer/PanelContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Score0" parent="VictoryScreen/PanelContainer/PanelContainer/VBoxContainer/MarginContainer/ScoreGraphs" instance=ExtResource("2_cvrxf")]
layout_mode = 2

[node name="Score1" parent="VictoryScreen/PanelContainer/PanelContainer/VBoxContainer/MarginContainer/ScoreGraphs" instance=ExtResource("2_cvrxf")]
layout_mode = 2

[node name="Score2" parent="VictoryScreen/PanelContainer/PanelContainer/VBoxContainer/MarginContainer/ScoreGraphs" instance=ExtResource("2_cvrxf")]
layout_mode = 2

[node name="Score3" parent="VictoryScreen/PanelContainer/PanelContainer/VBoxContainer/MarginContainer/ScoreGraphs" instance=ExtResource("2_cvrxf")]
layout_mode = 2

[node name="PlayerWin" type="Label" parent="VictoryScreen/PanelContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"EndLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimToggle" type="Timer" parent="VictoryScreen"]
autostart = true

[connection signal="timeout" from="VictoryScreen/AnimToggle" to="VictoryScreen" method="_on_anim_toggle_timeout"]
